eglibc (2.13-6) UNRELEASED; urgency=low

  * kfreebsd/local-sysdeps.diff, update to revision 3402 (from glibc-bsd),
    to fix <sys/mount.h>.  Closes: #629289. 

 -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Jun 2011 00:27:40 +0200

eglibc (2.13-5) unstable; urgency=low

  [ Aurelien Jarno ]
  * Update from stable branch:
    - Remove any/cvs-rtld-prelink.diff (merged upstream).
  * debhelper.in/libc.preinst: require a 8.0 kernel on GNU/kFreeBSD.
    Closes: #626422.
  * Bump to Standards-Version 3.9.2 (no changes).
  * Revert changes to patches/any/local-no-pagesize.diff, instead make
    sure PAGE_SIZE is not used internally.  Closes: #627273.
  * Add Swahili, Fulah and Bemba locales, backport from HEAD.
  * locale-gen: don't remove /usr/lib/locale/* in locale-gen. Closes: 
    #626575.
  * Add patches/any/cvs-setlocale.diff from upstream fixing reset to
    C locale issue in setlocale().  Closes: #627355.
  * Add patches/amd64/cvs-powl.diff from upstream to fix corner cases
    in powl() on amd64.
  * Add patches/localedata/locale-sv_FI.diff from upstream to fix date
    format.  Closes: #577988.
  * Add patches/any/submitted-rlimit-rttime.diff to fix missing 
    RLIMIT_RTTIME entry in <bits/resource.h>.  Closes: #627619.
  * patches/any/local-ld-multiarch.diff: add the multiarch compat dir
    instead of the multiarch dir.
  * Use the multiarch path for the native version and optimized flavors.
  * kfreebsd/local-sysdeps.diff, update to revision 3303 (from glibc-bsd),
    to fix brk(), semctl() and if_nameindex() bugs.
  * Add patches/any/local-tst-writev.diff to fix compilation of tst-writev.c.
  * Add breaks on packages which don't support multiarch paths.
  * Add patches/any/cvs-regex-oom.diff to fix an oom issue triggerable with 
    some regexes.
  * Add patches/any/cvs-getaddrinfo-single-lookup.diff to fix fallback to
    single lookup dns requests.  Closes: #541167.
  * Add patches/any/cvs-unique_sym_table-corruptions.diff to fix 