@@ -1,7 +1,10 @@
 eglibc (2.13-6) UNRELEASED; urgency=low
 
+  [ Aurelien Jarno ]
   * kfreebsd/local-sysdeps.diff, update to revision 3402 (from glibc-bsd),
-    to fix <sys/mount.h>.  Closes: #629289. 
+    to fix <sys/mount.h>.  Closes: #629289.
+  * debian/sysdeps/linux.mk: remove obsolete comment and code about 
+    asm-sparc64. Use the multiarch asm directory if present.
 
  -- Aurelien Jarno <aurel32@debian.org>  Sun, 05 Jun 2011 00:27:40 +0200
 
